--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -319,7 +319,7 @@ hr {
 #snow{
 	background: none;
 	font-family: Androgyne;
-	background-image: url('http://marsonge.github.io/DArWIn/assets/rosen.png'), url('http://marsonge.github.io/DArWIn/assets/rosen.png'), url('http://marsonge.github.io/DArWIn/assets/rosen.png');
+	background-image: url('http://marsonge.github.io/DArWIn/assets/rosen.png'), url('http://marsonge.github.io/DArWIn/assets/rosen2.png'), url('http://marsonge.github.io/DArWIn/assets/rosen.png');
 	height: 100%;
 	left: 0;
 	position: absolute;
